使用JDK8改写